<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:color="@color/white">

    <ImageView
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center"
        android:padding="17dp"
        android:background="@drawable/iconbackground"
        app:srcCompat="@drawable/mail"

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/title_font"
        android:text="@string/email_scr_Check_email"
        android:textColor="@color/primary_blue1"
        android:textSize="35sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:fontFamily="@font/text_font"
        android:text="@string/email_scr_explain_confirm"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/Btn_Checkemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_round"
        android:elevation="15dp"
        android:fontFamily="@font/title_font"
        android:padding="9dp"
        android:text="@string/vertifydoorlock_scr_confirm"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/text_font"
        android:text="@string/email_scr_havenotreceived"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/boldtext_font"
        android:text="@string/email_scr_resend"
        android:textColor="@color/black"/>

</LinearLayout>