<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:color="@color/white">

    <ImageView
        android:src="@drawable/iconbackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/title_font"
        android:text="@string/created_scr_Created"
        android:textColor="@color/primary_blue1"
        android:textSize="35sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_margin="10dp"
        android:fontFamily="@font/text_font"
        android:text="@string/created_scr_expalin_created"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/Btn_Accountcreated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_round"
        android:elevation="15dp"
        android:fontFamily="@font/title_font"
        android:padding="9dp"
        android:text="@string/vertifydoorlock_scr_confirm"
        android:textColor="@color/white"
        android:textSize="17sp" />
</LinearLayout>