<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:color="@color/white"
    android:weightSum="7">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.8"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/title_font"
            android:text="@string/logup_scr_signup"
            android:textColor="@color/primary_blue1"
            android:textSize="35sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/text_font"
            android:text="@string/logup_scr_create_account"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.4"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/Edit_UserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:hint="User Name"
            android:fontFamily="@font/text_font"
            android:background="@drawable/edittext_round"
            tools:ignore="HardcodedText"/>
        <EditText
            android:layout_marginTop="15dp"
            android:id="@+id/Edit_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:hint="Email"
            android:fontFamily="@font/text_font"
            android:background="@drawable/edittext_round"
            tools:ignore="HardcodedText"/>
        <EditText
            android:layout_marginTop="15dp"
            android:id="@+id/Edit_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:hint="Password"
            android:fontFamily="@font/text_font"
            android:background="@drawable/edittext_round"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/logup_scr_passwordrule"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:fontFamily="@font/text_font"
            android:layout_marginBottom="30dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.8"
        android:orientation="vertical" >
        <Button
            android:id="@+id/Btn_Signup_Continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_scr_continue"
            android:textColor="@color/white"
            android:fontFamily="@font/title_font"
            android:textSize="17sp"
            android:padding="9dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_round"
            android:elevation="8dp" />

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/logup_scr_policy"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:fontFamily="@font/text_font" />

        <TextView
            android:id="@+id/switchsignin"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/logup_scr_gosignup"
            android:textColor="@color/black"
            android:fontFamily="@font/text_font" />
    </LinearLayout>

</LinearLayout>