<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:color="@color/white">

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_weight="1"
     android:orientation="vertical">

  <TextView
      android:layout_width="285dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="80dp"
      android:fontFamily="@font/title_font"
      android:text="@string/resetpass_scr_reset_password"
      android:textColor="@color/primary_blue1"
      android:textSize="35sp" />


  <EditText
      android:id="@+id/Edit_newpassword"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="15dp"
      android:layout_marginTop="50dp"
      android:hint="New Password"
      android:fontFamily="@font/text_font"
      android:background="@drawable/edittext_round"
      tools:ignore="HardcodedText"/>

  <EditText
      android:id="@+id/Edit_confirmpassword"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="15dp"
      android:layout_marginTop="15dp"
      android:hint="Confirm New Password"
      android:fontFamily="@font/text_font"
      android:background="@drawable/edittext_round"
      tools:ignore="HardcodedText"/>


  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="5dp"
      android:fontFamily="@font/text_font"
      android:text="@string/resetpass_scr_passwordrule"
      android:textColor="@color/black" />

  <Button
      android:id="@+id/Btn_Resetpassword"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="50dp"
      android:background="@drawable/button_round"
      android:elevation="8dp"
      android:fontFamily="@font/title_font"
      android:padding="9dp"
      android:text="@string/resetpass_scr_continue"
      android:textColor="@color/white"
      android:textSize="17sp" />
 </LinearLayout>
</LinearLayout>